--- a/src/assets/scss/pages/_admin.scss
+++ b/src/assets/scss/pages/_admin.scss
@@ -486,7 +486,7 @@
         background: #161513;
 
         @include mobile {
-            padding: 15px 10px;
+            padding: 15px;
         }
     }
 
