--- a/src/assets/scss/pages/_admin.scss
+++ b/src/assets/scss/pages/_admin.scss
@@ -390,6 +390,7 @@
 
             @include mobile {
                 flex-direction: column;
+                gap: 5px;
             }
         }
 
@@ -459,7 +460,7 @@
 
             &_block {
                 background: #1E1817;
-                padding: 18px 22px;
+                padding: 18px 50px 18px 22px;
                 line-height: 1;
             }
 
@@ -492,6 +493,95 @@
         }
     }
 
+    &__last {
+        display: flex;
+        justify-content: center;
+        padding: 20px;
+        position: relative;
+        border-radius: 10px;
+        background: #1A1917;
+        margin-top: 15px;
+
+        &_bg {
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+        }
+
+        &_block {
+            position: relative;
+            z-index: 1;
+            display: flex;
+            align-items: center;
+            width: 100%;
+            max-width: 500px;
+            gap: 26px;
+
+            @include netbook {
+                max-width: max-content;
+            }
+        }
+
+        &_img {
+            display: flex;
+            width: 100%;
+            max-width: 112px;
+            height: 121px;
+            border-radius: 5px;
+            overflow: hidden;
+
+            img {
+                width: 112px;
+                height: 121px;
+                object-fit: cover;
+            }
+        }
+
+        &_title {
+            font-size: 20px;
+            font-weight: 500;
+            line-height: 1.2;
+            margin-bottom: 5px;
+        }
+
+        &_subtitle {
+            color: $text-dark;
+            font-size: 16px;
+            line-height: 1.2;
+        }
+
+        &_btn {
+            margin-top: 15px;
+            padding: 13px 20px;
+        }
+    }
+
+    &__tickets {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        margin-top: 20px;
+    }
+
+    &__ticket_btn {
+        padding: 9px 11px;
+        border-radius: 3px;
+        border: 1.258px solid #33302D;
+        background: linear-gradient(142deg, #342D27 0%, #222220 67.95%);
+        display: flex;
+        align-items: center;
+        gap: 11px;
+        font-size: 12px;
+        color: $text-dark;
+
+        svg {
+            width: 28px;
+            height: 28px;
+            display: flex;
+        }
+    }
 }
 
 .admin-table {
@@ -702,6 +792,7 @@
     &__title {
         font-size: 16px;
         color: $text-dark;
+        margin-bottom: 20px;
 
         &._center {
             text-align: center;
@@ -722,6 +813,163 @@
 
 .admin-reviews {
     margin-top: 40px;
+}
+
+.admin-orders {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+.admin-order-card {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 12px;
+    border-radius: 12px;
+    padding: 12px 7px 12px 12px;
+    background: linear-gradient(to right, rgba(51, 50, 49, 0.35) 0%, rgba(79, 79, 79, 0.17) 63.74%, rgba(79, 79, 79, 0.35) 101.17%);
+
+    &:nth-child(odd) {
+        background: linear-gradient(to left, rgba(51, 50, 49, 0.35) 0%, rgba(79, 79, 79, 0.17) 63.74%, rgba(79, 79, 79, 0.35) 101.17%);
+    }
+
+    @include mobile {
+        display: grid;
+        grid-template-columns: 1fr auto;
+    }
+
+    &__img {
+        display: flex;
+        width: 100%;
+        max-width: 67px;
+
+        &_item {
+            object-fit: cover;
+            height: 74px;
+            width: 67px;
+            border-radius: 10px;
+        }
+    }
+
+    &__content {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+
+        @include mobile {
+            padding-right: 28px;
+        }
+    }
+
+    &__title {
+        font-size: 15px;
+        line-height: 1.2;
+        font-weight: 500;
+
+        ._support {
+            color: $orange;
+        }
+    }
+
+    &__text {
+        margin-top: 4px;
+        font-size: 12px;
+        color: $text-dark;
+        line-height: 1.3;
+
+        display: -webkit-box;
+        -webkit-line-clamp: 3;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+
+    &__info {
+        display: flex;
+        gap: 20px;
+        align-items: center;
+        margin-top: 6px;
+    }
+
+    &__date {
+        font-size: 12px;
+        color: $text-dark;
+        line-height: 1;
+    }
+
+    &__price {
+        font-size: 12px;
+        color: $orange;
+    }
+
+    &__btns {
+        width: 100%;
+        max-width: 160px;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        align-items: flex-end;
+        gap: 20px;
+
+        @include mobile {
+            grid-column-start: 1;
+            grid-column-end: 3;
+            max-width: 100%;
+        }
+    }
+
+    &__btn {
+        border-radius: 5.372px;
+        background: #2A2724;
+        padding: 9px 13px;
+        font-size: 10px;
+        color: $text-dark;
+        line-height: 1;
+        transition: 200ms ease;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        &:hover {
+            background-color: darken($color: #2A2724, $amount: 5);
+        }
+    }
+
+    &__icon {
+        width: 24px;
+        height: 24px;
+        display: flex;
+
+        @include mobile {
+            position: absolute;
+            right: 6px;
+            top: 10px;
+        }
+    }
+
+    &__status {
+        display: flex;
+        gap: 4px;
+        font-size: 12px;
+        color: $text-dark;
+
+        ._open {
+            color: #53A779;
+        }
+    }
+}
+
+.admin-tickets {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+
+    .admin-order-card {
+        padding: 12px;
+    }
 }
 
 .admin-card {
