--- a/src/assets/scss/pages/_admin.scss
+++ b/src/assets/scss/pages/_admin.scss
@@ -575,11 +575,20 @@
         gap: 11px;
         font-size: 12px;
         color: $text-dark;
+        transition: 300ms ease;
 
         svg {
             width: 28px;
             height: 28px;
             display: flex;
+        }
+
+        &:hover {
+            border-color: $orange;
+
+            svg path {
+                fill: $orange;
+            }
         }
     }
 }
@@ -844,12 +853,31 @@
         display: flex;
         width: 100%;
         max-width: 67px;
+        position: relative;
 
         &_item {
             object-fit: cover;
             height: 74px;
             width: 67px;
             border-radius: 10px;
+
+            &._opacity {
+                filter: brightness(0.3);
+            }
+        }
+
+        &_icon {
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+        }
+
+        &_bg {
+            height: 74px;
+            width: 67px;
+            border-radius: 12px;
+            background: linear-gradient(91deg, rgba(51, 50, 49, 0.35) 0%, rgba(79, 79, 79, 0.17) 63.74%, rgba(79, 79, 79, 0.35) 101.17%);
         }
     }
 
@@ -870,6 +898,10 @@
 
         ._support {
             color: $orange;
+        }
+
+        ._return {
+            color: #7B463E;
         }
     }
 
@@ -958,6 +990,14 @@
 
         ._open {
             color: #53A779;
+        }
+
+        ._pending {
+            color: #6993FE;
+        }
+
+        ._success{
+            color: $orange;
         }
     }
 }
