--- a/src/assets/scss/sections/_header.scss
+++ b/src/assets/scss/sections/_header.scss
@@ -490,14 +490,29 @@
         }
 
         &_admin {
-            width: 42px;
-            height: 42px;
-            border-radius: 8px;
-            border: 2px solid #44403E;
-            background: lightgray 50% / cover no-repeat;
-            overflow: hidden;
-            margin-left: 10px;
-            padding: 0;
+
+            &_open {
+                width: 42px;
+                height: 42px;
+                border-radius: 8px;
+                border: 2px solid #44403E;
+                background: lightgray 50% / cover no-repeat;
+                overflow: hidden;
+                margin-left: 10px;
+                padding: 0;
+
+                &:focus {
+                    border: 2px solid #44403E;
+                }
+
+                &:hover {
+                    border-color: $orange;
+                }
+
+                &._active {
+                    border: 2px solid $orange;
+                }
+            }
 
             @include netbook {
                 border-width: 1px;
@@ -511,13 +526,6 @@
                 border-width: 1px;
             }
 
-            &:focus {
-                border: 2px solid #44403E;
-            }
-
-            &:hover {
-                border-color: $orange;
-            }
 
             &_drop {
                 position: absolute;
@@ -552,6 +560,7 @@
                 justify-content: center;
                 border-bottom: 1px solid transparent;
                 position: relative;
+                color: $text-dark;
 
                 svg path {
                     transition: 300ms ease;
@@ -567,7 +576,7 @@
                     }
                 }
 
-                &._exit {
+                &_exit {
                     border-radius: 12px;
                     background: #42312A;
                     padding: 8px;
@@ -592,9 +601,6 @@
 
             &_link {}
 
-            &._active {
-                border: 2px solid $orange;
-            }
         }
     }
 }
