--- a/src/partials/main-header.html
+++ b/src/partials/main-header.html
@@ -239,8 +239,11 @@
                         </svg>
                     </a>
                 </div>
-                <button class="header__actions_admin">
-                    <img src="assets/images/home-new/admin.png" alt="">
+                <div class="header__actions_admin">
+                    <button class="header__actions_admin_open">
+                        <img src="assets/images/home-new/admin.png" alt="">
+                    </button>
+
                     <div class="header__actions_admin_drop">
                         <a class="header__actions_admin_item" href="#">
                             <span class="header__actions_admin_svg">
@@ -294,7 +297,7 @@
                             </span>
                             <span class="header__actions_admin_link">Мои тикеты</span>
                         </a>
-                        <a class="header__actions_admin_item _exit" href="#">
+                        <button class="header__actions_admin_item header__actions_admin_item_exit">
                             <span class="header__actions_admin_svg">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17" fill="none">
                                     <g clip-path="url(#clip0_521_24146)">
@@ -309,9 +312,9 @@
                                 </svg>
                             </span>
                             <span class="header__actions_admin_link">Выйти</span>
-                        </a>
+                        </button>
                     </div>
-                </button>
+                </div>
             </div>
         </div>
     </div>
