--- a/src/assets/scss/sections/_footer.scss
+++ b/src/assets/scss/sections/_footer.scss
@@ -338,12 +338,13 @@
         display: flex;
         flex-direction: column;
         gap: 5px;
-        padding: 50px 30px;
+        padding: 60px 30px;
         overflow-y: scroll;
 
         &::-webkit-scrollbar {
             display: none;
         }
+
     }
 
     &__form {
@@ -361,6 +362,10 @@
             width: 100%;
             max-width: 610px;
         }
+
+        @include mobile {
+            padding: 60px 12px 40px;
+        }
     }
 
     &__btns {
@@ -369,6 +374,11 @@
         grid-template-columns: 1fr 1fr;
         gap: 30px 10px;
         margin-top: 10px;
+
+        @include mobile {
+            grid-template-columns: 1fr;
+            gap: 10px;
+        }
     }
 
     &__close {
@@ -390,6 +400,11 @@
             svg path {
                 fill: $orange;
             }
+        }
+
+        @include mobile {
+            top: 12px;
+            right: 12px;
         }
     }
 
@@ -478,6 +493,13 @@
         flex-direction: column;
         line-height: 1.1;
 
+        @include mobile {
+            align-items: center;
+            text-align: center;
+            margin-top: 10px;
+            margin-bottom: 10px;
+        }
+
         &_title {
             color: $text-dark;
             font-size: 14px;
@@ -504,11 +526,22 @@
         grid-template-columns: 1fr 1fr;
         position: relative;
 
+        @include mobile {
+            grid-template-columns: max-content;
+            justify-content: center;
+            gap: 40px;
+            padding: 20px;
+        }
+
         &_content {
             display: flex;
             flex-direction: column;
             gap: 8px;
             line-height: 1;
+
+            @include mobile {
+                text-align: center;
+            }
         }
 
         &_title {
@@ -547,6 +580,16 @@
                 position: absolute;
                 width: auto;
                 height: 150px;
+
+                @include mobile {
+                    height: 120px;
+                }
+            }
+
+            @include mobile {
+                width: auto;
+                padding: 14px 20px;
+                font-size: 24px;
             }
         }
 
