--- a/src/partials/main-footer.html
+++ b/src/partials/main-footer.html
@@ -144,7 +144,7 @@
 
 </footer>
 
-<div class="main-login _active">
+<div class="main-login">
     <div class="main-login__overlay"></div>
     <div class="main-login__content">
         <div class="main-login__form">
