--- a/src/partials/main-header.html
+++ b/src/partials/main-header.html
@@ -245,7 +245,7 @@
                     </button>
 
                     <div class="header__actions_admin_drop">
-                        <a class="header__actions_admin_item" href="#">
+                        <a class="header__actions_admin_item" href="admin-statics.html">
                             <span class="header__actions_admin_svg">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
                                     <g clip-path="url(#clip0_2402_20566)">
@@ -260,7 +260,7 @@
                             </span>
                             <span class="header__actions_admin_link">Моя статистика</span>
                         </a>
-                        <a class="header__actions_admin_item" href="#">
+                        <a class="header__actions_admin_item" href="admin-wallet.html">
                             <span class="header__actions_admin_svg">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
                                     <path d="M8.25884 21.2464C8.90577 20.5994 9.27741 19.7734 9.37376 18.9199C9.50452 17.7842 9.126 16.6072 8.25884 15.7399C7.74268 15.2236 7.10952 14.8795 6.44195 14.7212C5.16874 14.3977 3.7579 14.7349 2.7531 15.7399C2.058 16.4351 1.67948 17.323 1.6313 18.2385C1.59689 18.6308 1.6313 19.0369 1.73453 19.4293C1.89282 20.097 2.23693 20.7302 2.7531 21.2464C4.27406 22.7676 6.73788 22.7676 8.25884 21.2464ZM6.96499 17.7773C7.36416 17.7773 7.69451 18.1077 7.69451 18.5069C7.68762 18.913 7.36416 19.2366 6.95811 19.2434L6.23548 19.2366L6.24236 19.9318C6.23548 20.3379 5.91202 20.6614 5.50597 20.6683C5.09992 20.6614 4.77646 20.3379 4.76958 19.9318L4.77646 19.2366L4.05383 19.2434C3.64778 19.2366 3.32432 18.913 3.31744 18.5069C3.32432 18.3073 3.4069 18.1284 3.53766 17.9976C3.66843 17.8668 3.84736 17.7842 4.04695 17.7773L4.77646 17.7773L4.77646 17.0202C4.77646 16.8137 4.85905 16.6347 4.98981 16.5039C5.12057 16.3731 5.2995 16.2905 5.50597 16.2905C5.90514 16.2905 6.23548 16.6209 6.23548 17.0202L6.23548 17.7773L6.96499 17.7773Z" fill="#847F7D" />
@@ -271,7 +271,7 @@
                             </span>
                             <span class="header__actions_admin_link">Мой кошелек</span>
                         </a>
-                        <a class="header__actions_admin_item" href="#">
+                        <a class="header__actions_admin_item" href="admin-orders.html">
                             <span class="header__actions_admin_svg">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
                                     <g clip-path="url(#clip0_2402_31415)">
@@ -288,7 +288,7 @@
                             </span>
                             <span class="header__actions_admin_link">Мои заказы</span>
                         </a>
-                        <a class="header__actions_admin_item" href="#">
+                        <a class="header__actions_admin_item" href="admin-tickets.html">
                             <span class="header__actions_admin_svg">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
                                     <path d="M13.19 6H6.79C6.53 6 6.28 6.01 6.04 6.04C3.35 6.27 2 7.86 2 10.79V14.79C2 18.79 3.6 19.58 6.79 19.58H7.19C7.41 19.58 7.7 19.73 7.83 19.9L9.03 21.5C9.56 22.21 10.42 22.21 10.95 21.5L12.15 19.9C12.3 19.7 12.54 19.58 12.79 19.58H13.19C16.12 19.58 17.71 18.24 17.94 15.54C17.97 15.3 17.98 15.05 17.98 14.79V10.79C17.98 7.6 16.38 6 13.19 6ZM6.5 14C5.94 14 5.5 13.55 5.5 13C5.5 12.45 5.95 12 6.5 12C7.05 12 7.5 12.45 7.5 13C7.5 13.55 7.05 14 6.5 14ZM9.99 14C9.43 14 8.99 13.55 8.99 13C8.99 12.45 9.44 12 9.99 12C10.54 12 10.99 12.45 10.99 13C10.99 13.55 10.55 14 9.99 14ZM13.49 14C12.93 14 12.49 13.55 12.49 13C12.49 12.45 12.94 12 13.49 12C14.04 12 14.49 12.45 14.49 13C14.49 13.55 14.04 14 13.49 14Z" fill="#847F7D" />
