--- a/src/partials/main-header.html
+++ b/src/partials/main-header.html
@@ -321,9 +321,43 @@
 </header>
 
 <div class="js-hamburger-menu logo-menu">
+    <div class="logo-menu__title">
+        <div class="container">
+            <div class="logo-menu__title_block">
+                <span>Навигация по сайту</span>
+                <button class="logo-menu__close">
+                    <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <rect width="30" height="30" rx="5" transform="matrix(1 0 0 -1 0 30)" fill="#2E2D2B" />
+                        <g clip-path="url(#clip0_1072_51203)">
+                            <path d="M16.98 15.0004L20.6923 11.288C21.1025 10.8778 21.1025 10.2128 20.6923 9.80331L20.1974 9.3084C19.7871 8.8981 19.1221 8.8981 18.7126 9.3084L15.0004 13.0206L11.288 9.30763C10.8778 8.89746 10.2128 8.89746 9.80331 9.30763L9.30763 9.80254C8.89746 10.2128 8.89746 10.8778 9.30763 11.2874L13.0206 15.0004L9.3084 18.7126C8.8981 19.1229 8.8981 19.7879 9.3084 20.1974L9.80331 20.6923C10.2135 21.1025 10.8785 21.1025 11.288 20.6923L15.0004 16.98L18.7126 20.6923C19.1229 21.1025 19.7879 21.1025 20.1974 20.6923L20.6923 20.1974C21.1025 19.7871 21.1025 19.1221 20.6923 18.7126L16.98 15.0004Z" fill="#514F4B" />
+                        </g>
+                        <defs>
+                            <clipPath id="clip0_1072_51203">
+                                <rect width="12" height="12" fill="white" transform="translate(9 9)" />
+                            </clipPath>
+                        </defs>
+                    </svg>
+                </button>
+            </div>
+        </div>
+    </div>
     <div class="container">
         <div class="logo-menu__block">
-
+            <div class="logo-menu__content">
+                <div class="logo-menu__content_title">GameBis</div>
+                <ul class="logo-menu__menu">
+                    <li><a href="#" class="logo-menu__item">О магазине</a></li>
+                    <li><a href="#" class="logo-menu__item">Отзывы</a></li>
+                    <li><a href="#" class="logo-menu__item">Как покупать</a></li>
+                    <li><a href="#" class="logo-menu__item">Доставка</a></li>
+                    <li><a href="#" class="logo-menu__item">Гарантии</a></li>
+                    <li><a href="#" class="logo-menu__item">Служба поддержки</a></li>
+                    <li><a href="#" class="logo-menu__item">Партнерская программа</a></li>
+                    <li><a href="#" class="logo-menu__item">Вакансии</a></li>
+                    <li><a href="#" class="logo-menu__item">Блог</a></li>
+                    <li><a href="#" class="logo-menu__item">Соглашение</a></li>
+                </ul>
+            </div>
         </div>
     </div>
 </div>
