--- a/src/assets/scss/sections/_header.scss
+++ b/src/assets/scss/sections/_header.scss
@@ -661,12 +661,30 @@
         grid-template-columns: repeat(6, auto);
         gap: 20px;
         margin-top: 30px;
+
+        @include netbook {
+            grid-template-columns: repeat(4, auto);
+        }
+
+        @include mobile {
+            grid-template-columns: 1fr;
+            justify-content: center;
+        }
     }
 
     &__item {
         font-size: 14px;
         color: $text-dark;
         line-height: 1;
+
+        &:hover {
+            color: $orange;
+        }
+
+        @include mobile {
+            width: 100%;
+            text-align: center;
+        }
     }
 }
 
