--- a/src/partials/main-header.html
+++ b/src/partials/main-header.html
@@ -360,6 +360,8 @@
             </div>
         </div>
     </div>
+    <div class="logo-menu__bg"></div>
+    <div class="logo-menu__wrapper"></div>
 </div>
 
 <div class="js-search-menu">
