--- a/src/assets/scss/pages/_mobile-games.scss
+++ b/src/assets/scss/pages/_mobile-games.scss
@@ -155,13 +155,14 @@
         grid-template-columns: repeat(5, 1fr);
         gap: 15px 10px;
         justify-content: space-between;
+        margin-bottom: 30px;
 
         @include netbook {
-            grid-template-columns: repeat(4, 1fr);
+            grid-template-columns: repeat(3, 1fr);
         }
 
         @include mobile {
-            grid-template-columns: repeat(2, 1fr);
+            grid-template-columns: repeat(1, 1fr);
         }
     }
 
