--- a/src/assets/scss/pages/_mobile-games.scss
+++ b/src/assets/scss/pages/_mobile-games.scss
@@ -171,3 +171,98 @@
         justify-self: center;
     }
 }
+
+.mobile-game-form {
+    margin-top: 20px;
+    margin-bottom: 40px;
+
+    &__header {
+        display: flex;
+        align-items: center;
+        position: relative;
+
+        &_bg {
+            position: absolute;
+            z-index: 1;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+        }
+
+        &_content {
+            position: relative;
+            z-index: 2;
+            display: flex;
+            align-items: center;
+            gap: 20px;
+            width: 100%;
+            height: 100%;
+            padding: 10px 20px;
+        }
+
+        &_logo {
+            width: 104px;
+            height: 104px;
+            object-fit: contain;
+        }
+
+        &_title {
+            font-size: 24px;
+            font-weight: 600;
+            width: 100%;
+            max-width: 288px;
+            line-height: 1.3;
+        }
+
+        &_unit {
+            width: 212px;
+            height: 130px;
+            object-fit: contain;
+            margin-left: auto;
+        }
+    }
+
+    &__block {
+        display: flex;
+        gap: 20px;
+
+        @include netbook {
+            flex-direction: column;
+        }
+    }
+
+    &__form {
+        border-radius: 10px;
+        background: #1A1917;
+        width: 100%;
+
+    }
+
+    &__inputs {
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    &__selects {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 10px;
+    }
+
+    &__checkbox {
+        width: 100%;
+        max-width: calc(50% - 5px);
+    }
+
+    .steam-login__info {
+        position: sticky;
+        top: 50px;
+    }
+
+    .steam-login__pay {
+        margin-top: 15px;
+    }
+}
