--- a/src/assets/scss/pages/_steam.scss
+++ b/src/assets/scss/pages/_steam.scss
@@ -650,6 +650,56 @@
                 margin: 16px auto;
             }
         }
+
+        &_name {
+            display: flex;
+            gap: 10px;
+            align-items: center;
+            justify-content: space-between;
+            margin-bottom: 15px;
+
+            &_text {
+                font-size: 24px;
+                font-weight: 600;
+                color: white;
+                line-height: 1.3;
+            }
+
+            &_region {
+                width: 36px;
+                height: 34px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                padding: 7px;
+                border-radius: 4px;
+                background: #282725;
+            }
+
+        }
+
+        &_item {
+            display: flex;
+            align-items: center;
+            border-radius: 5px;
+            background: #282725;
+            padding: 7px;
+            width: max-content;
+            margin-bottom: 20px;
+            line-height: 1;
+            gap: 5px;
+
+            &_count {
+                font-size: 12px;
+                font-weight: 500;
+            }
+
+            &_img {
+                width: 22px;
+                height: 18px;
+                object-fit: contain;
+            }
+        }
     }
 
     &__pay {
@@ -800,6 +850,7 @@
         &_sub {
             font-size: 10px;
             color: $text-dark;
+            text-align: right;
         }
 
         &_get {
@@ -816,13 +867,25 @@
 
             &_block {
                 display: flex;
+                align-items: center;
+                gap: 7px;
+            }
+
+            &_bonus {
+                font-size: 12px;
+            }
+
+            &_wrap {
+                display: flex;
                 flex-direction: column;
                 align-items: flex-end;
                 gap: 5px;
             }
 
-            &_bonus {
-                font-size: 12px;
+            &_icon {
+                width: 47px;
+                height: 38px;
+                object-fit: contain;
             }
         }
 
